--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -20,3 +20,4 @@ jobs:
           path: .cache
       - run: pip install mkdocs-material
       - run: pip install pillow cairosvg
+      - run: mkdocs gh-deploy --force
